[package]
name = "taskapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
bson = "2.9.0"
dotenv = "0.15.0"
futures = "0.3.30"
mongodb = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.0", features = ["full"] }
